--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.3",
+    "google-maps-react": "^2.0.6",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
